Committing multiple updated files to local repository